dynamically_typed_tests/invalid/expression/intOpTypeErr.wacc
# expresission type mismatch bool->int

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  x = true + false
end
